syntax = "proto3";

service Greeter {
    rpc Hello (HelloRequest) returns (HelloResponse) {
    }
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string greeting = 2;
}

service MovieControl {
    rpc AddMovie (AddMovieRequest) returns (RequestResponse) {
    }
    rpc DeleteMovie (DeleteMovieRequest) returns (RequestResponse) {
    }
    rpc GetMovie (GetMovieRequest) returns (GetMovieResponse) {
    }
}

message AddMovieRequest {
    string title = 1;
}

message RequestResponse {
    bool succeeded = 1;
    string cause = 2;
    int32 id = 3;
}

message DeleteMovieRequest {
    int32 id = 1;
}

message GetMovieRequest {
}

message MovieData {
    int32 id = 1;
    string title = 2;
}
message GetMovieResponse {
    repeated MovieData data = 1;
}

service RoomControl {
    rpc AddRoom (AddRoomRequest) returns (RequestResponse) {
    }
    rpc DeleteRoom (DeleteRoomRequest) returns (RequestResponse) {
    }
    rpc GetRoom (GetRoomRequest) returns (GetRoomResponse) {
    }
    rpc GetSingleRoom (GetSingleRoomRequest) returns (RoomData) {
    }
}

message AddRoomRequest {
    string name = 1;
    int32 rows = 2;
    int32 seatsPerRow = 3;
}

message DeleteRoomRequest {
    int32 id = 1;
}

message GetRoomRequest {
}

message GetSingleRoomRequest {
    int32 id = 1;
}

message RoomData {
    int32 id = 1;
    string name = 2;
    int32 rows = 3;
    int32 seatsPerRow = 4;
}

message GetRoomResponse {
    repeated RoomData data = 1;
}

service ShowControl {
    rpc AddShow (AddShowRequest) returns (RequestResponse) {
    }
    rpc DeleteShow (DeleteShowRequest) returns (RequestResponse) {
    }
    rpc CheckSeat (AvailableSeatRequest) returns (RequestResponse) {
    }
    rpc NotifyMovieDelete(MovieData) returns (RequestResponse) {
    }
    rpc NotifyRoomDelete(RoomData) returns (RequestResponse) {
    }
}

message AddShowRequest {
    int32 movieId = 1;
    int32 roomId = 2;
}

message DeleteShowRequest {
    int32 id = 1;
}

message AvailableSeatRequest {
    int32 id = 1;
    int32 row = 2;
    int32 seat = 3;
    bool write = 4;
    bool value = 5;
}

service UserControl {
    rpc AddUser (AddUserRequest) returns (RequestResponse) {
    }
    rpc DeleteUser (DeleteUserRequest) returns (RequestResponse) {
    }
    rpc CheckUserReservation (CheckUserReservationRequest) returns (RequestResponse) {
    }
    rpc AddUserReservation (AddUserReservationRequest) returns (RequestResponse) {
    }
    rpc DeleteUserReservation (DeleteUserReservationRequest) returns (RequestResponse) {
    }
}

message AddUserRequest {
    string name = 1;
}

message DeleteUserRequest {
    int32 id = 1;
}

message DeleteUserReservationRequest {
    int32 userId = 1;
    int32 reservationId = 2;
}

message AddUserReservationRequest {
    int32 userId = 1;
    int32 reservationId = 2;
}

message CheckUserReservationRequest {
    int32 id = 1;
}

message UserData {
    int32 id = 1;
    string title = 2;
}

service ReservationControl {
    rpc AddReservation (AddReservationRequest) returns (RequestResponse) {
    }
    rpc ActivateReservation (ActivateReservationRequest) returns (ReservationResponse) {
    }
    rpc GetReservationsForUser (GetReservationsForUserRequest) returns (GetReservationsForUserResponse) {
    }
    rpc RemoveReservation (RemoveReservationRequest) returns (RequestResponse) {
    }
}

message AddReservationRequest{
    int32 showId = 1;
    repeated Seat seats = 2;
	int32 userId = 3;
}

message ActivateReservationRequest{
    int32 reservationId = 1;
    int32 userId = 2;
}

message ReservationResponse {
    Reservation reservation = 1;
}

message Reservation{
	int32 id = 1;
	int32 userId = 2;
	int32 showId = 3;
	repeated Seat seats = 4;
	bool active = 5;
}

message Seat{
	int32 row = 1;
	int32 column = 2;
}

message GetReservationsForUserRequest {
    int32 userId = 1;
}

message GetReservationsForUserResponse {
	repeated Reservation reservations = 1;
}

message RemoveReservationRequest {
    int32 userId = 1;
    int32 reserId = 2;
}
